--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,10 @@
+$bp-largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
+$bp-medium: 56.25em; // 900px
+$bp-small: 37.5em; // 600px
+$bp-smallest: 31.25em; // 500px
+
 $default-font-size: 1.6rem;
 $grey-color: #c4c4c4;
 $red-color: #ff7a7a;
+$black-color: black;
